src/libqtextformat.bf

public struct QTextFormat
{
	[LinkName("QTextFormat_new")]
	public static extern void* QTextFormat_new();
	[LinkName("QTextFormat_new2")]
	public static extern void* QTextFormat_new2(int32 typeVal);
	[LinkName("QTextFormat_new3")]
	public static extern void* QTextFormat_new3(QTextFormat rhs);
	[LinkName("QTextFormat_OperatorAssign")]
	public static extern void QTextFormat_OperatorAssign(void* c_this, QTextFormat rhs);
	[LinkName("QTextFormat_Swap")]
	public static extern void QTextFormat_Swap(void* c_this, QTextFormat other);
	[LinkName("QTextFormat_Merge")]
	public static extern void QTextFormat_Merge(void* c_this, QTextFormat other);
	[LinkName("QTextFormat_IsValid")]
	public static extern bool QTextFormat_IsValid(void* c_this);
	[LinkName("QTextFormat_IsEmpty")]
	public static extern bool QTextFormat_IsEmpty(void* c_this);
	[LinkName("QTextFormat_Type")]
	public static extern int32 QTextFormat_Type(void* c_this);
	[LinkName("QTextFormat_ObjectIndex")]
	public static extern int32 QTextFormat_ObjectIndex(void* c_this);
	[LinkName("QTextFormat_SetObjectIndex")]
	public static extern void QTextFormat_SetObjectIndex(void* c_this, int32 object);
	[LinkName("QTextFormat_Property")]
	public static extern QVariant QTextFormat_Property(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_SetProperty")]
	public static extern void QTextFormat_SetProperty(void* c_this, int32 propertyId, QVariant value);
	[LinkName("QTextFormat_ClearProperty")]
	public static extern void QTextFormat_ClearProperty(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_HasProperty")]
	public static extern bool QTextFormat_HasProperty(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_BoolProperty")]
	public static extern bool QTextFormat_BoolProperty(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_IntProperty")]
	public static extern int32 QTextFormat_IntProperty(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_DoubleProperty")]
	public static extern double QTextFormat_DoubleProperty(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_StringProperty")]
	public static extern char8[] QTextFormat_StringProperty(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_ColorProperty")]
	public static extern QColor QTextFormat_ColorProperty(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_PenProperty")]
	public static extern QPen QTextFormat_PenProperty(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_BrushProperty")]
	public static extern QBrush QTextFormat_BrushProperty(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_LengthProperty")]
	public static extern QTextLength QTextFormat_LengthProperty(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_LengthVectorProperty")]
	public static extern QTextLength[] QTextFormat_LengthVectorProperty(void* c_this, int32 propertyId);
	[LinkName("QTextFormat_SetProperty2")]
	public static extern void QTextFormat_SetProperty2(void* c_this, int32 propertyId, QTextLength[] lengths);
	[LinkName("QTextFormat_Properties")]
	public static extern void* QTextFormat_Properties(void* c_this);
	[LinkName("QTextFormat_PropertyCount")]
	public static extern int32 QTextFormat_PropertyCount(void* c_this);
	[LinkName("QTextFormat_SetObjectType")]
	public static extern void QTextFormat_SetObjectType(void* c_this, int32 typeVal);
	[LinkName("QTextFormat_ObjectType")]
	public static extern int32 QTextFormat_ObjectType(void* c_this);
	[LinkName("QTextFormat_IsCharFormat")]
	public static extern bool QTextFormat_IsCharFormat(void* c_this);
	[LinkName("QTextFormat_IsBlockFormat")]
	public static extern bool QTextFormat_IsBlockFormat(void* c_this);
	[LinkName("QTextFormat_IsListFormat")]
	public static extern bool QTextFormat_IsListFormat(void* c_this);
	[LinkName("QTextFormat_IsFrameFormat")]
	public static extern bool QTextFormat_IsFrameFormat(void* c_this);
	[LinkName("QTextFormat_IsImageFormat")]
	public static extern bool QTextFormat_IsImageFormat(void* c_this);
	[LinkName("QTextFormat_IsTableFormat")]
	public static extern bool QTextFormat_IsTableFormat(void* c_this);
	[LinkName("QTextFormat_IsTableCellFormat")]
	public static extern bool QTextFormat_IsTableCellFormat(void* c_this);
	[LinkName("QTextFormat_ToBlockFormat")]
	public static extern QTextBlockFormat QTextFormat_ToBlockFormat(void* c_this);
	[LinkName("QTextFormat_ToCharFormat")]
	public static extern QTextCharFormat QTextFormat_ToCharFormat(void* c_this);
	[LinkName("QTextFormat_ToListFormat")]
	public static extern QTextListFormat QTextFormat_ToListFormat(void* c_this);
	[LinkName("QTextFormat_ToTableFormat")]
	public static extern QTextTableFormat QTextFormat_ToTableFormat(void* c_this);
	[LinkName("QTextFormat_ToFrameFormat")]
	public static extern QTextFrameFormat QTextFormat_ToFrameFormat(void* c_this);
	[LinkName("QTextFormat_ToImageFormat")]
	public static extern QTextImageFormat QTextFormat_ToImageFormat(void* c_this);
	[LinkName("QTextFormat_ToTableCellFormat")]
	public static extern QTextTableCellFormat QTextFormat_ToTableCellFormat(void* c_this);
	[LinkName("QTextFormat_OperatorEqual")]
	public static extern bool QTextFormat_OperatorEqual(void* c_this, QTextFormat rhs);
	[LinkName("QTextFormat_OperatorNotEqual")]
	public static extern bool QTextFormat_OperatorNotEqual(void* c_this, QTextFormat rhs);
	[LinkName("QTextFormat_ToQVariant")]
	public static extern QVariant QTextFormat_ToQVariant(void* c_this);
	[LinkName("QTextFormat_SetLayoutDirection")]
	public static extern void QTextFormat_SetLayoutDirection(void* c_this, int64 direction);
	[LinkName("QTextFormat_LayoutDirection")]
	public static extern int64 QTextFormat_LayoutDirection(void* c_this);
	[LinkName("QTextFormat_SetBackground")]
	public static extern void QTextFormat_SetBackground(void* c_this, QBrush brush);
	[LinkName("QTextFormat_Background")]
	public static extern QBrush QTextFormat_Background(void* c_this);
	[LinkName("QTextFormat_ClearBackground")]
	public static extern void QTextFormat_ClearBackground(void* c_this);
	[LinkName("QTextFormat_SetForeground")]
	public static extern void QTextFormat_SetForeground(void* c_this, QBrush brush);
	[LinkName("QTextFormat_Foreground")]
	public static extern QBrush QTextFormat_Foreground(void* c_this);
	[LinkName("QTextFormat_ClearForeground")]
	public static extern void QTextFormat_ClearForeground(void* c_this);
}
